# Tmoe-for-Droidspaces

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  install.sh
.claude/skills/: standardize.md
.claude/skills/audit-permissions/: runtime-audit-design.md  skill.md
.claude/skills/standardize/: skill.md
.claude/skills/tech-doc/: skill.md
.claude/skills/ui-plugin/: skill.md
.github/workflows/: build.yml
data/: mirror_registry.json  rootfs_map.json
locales/: de_DE.json  en_US.json  fr_FR.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json
src/: main.cpp
src/app/: manager.cpp  manager.h  software_center.cpp  software_center.h
src/core/: cli_parser.cpp  cli_parser.h  command_builder.cpp  command_builder.hpp  config.cpp  config.h  executor.cpp  executor.h  i18n.cpp  i18n.h  launch_context.h  logger.cpp  logger.h  platform.h  str_utils.h  system_helper.cpp  system_helper.h
src/domain/: backup.cpp  backup.h  beta_features.cpp  beta_features.h  browser.cpp  browser.h  chroot_runtime.cpp  config_manager.cpp  config_manager.h  container.cpp  container.h  container_manager.cpp  container_manager.h  desktop_manager.cpp  desktop_manager.h  dev_tools.cpp  dev_tools.h  docker.cpp  docker.h  download_tools.cpp  education.cpp  education.h  environment.cpp  environment.h  gui.cpp  gui.h  input_method.cpp  input_method.h  installer.cpp  installer.hpp  mirror_registry.cpp  mirror_registry.h  mirrors.cpp  mirrors.h  nspawn_runtime.cpp  office.cpp  package_manager.cpp  package_manager.h  proot_runtime.cpp  qemu_runtime.cpp  (+14 more)
src/domain/apps/: browser.cpp  browser.h  browser_apps.cpp  browser_apps.h  dev_tools.cpp  dev_tools.h  download_tools.cpp  download_tools.h  input_method.cpp  input_method.h  installable_app.cpp  installable_app.h  media_tools.cpp  media_tools.h  office.cpp  office.h  office_apps.cpp  office_apps.h  software_center.cpp  software_center.h  terminal_app.cpp  terminal_app.h
src/domain/desktops/: budgie_desktop.cpp  budgie_desktop.h  cinnamon_desktop.cpp  cinnamon_desktop.h  cutefish_desktop.cpp  cutefish_desktop.h  dde_desktop.cpp  dde_desktop.h  deepin_desktop.cpp  deepin_desktop.h  desktop_base.h  desktop_factory.cpp  desktop_factory.h  desktop_utils.cpp  desktop_utils.h  gnome_desktop.cpp  gnome_desktop.h  kde_desktop.cpp  kde_desktop.h  lxde_desktop.cpp  lxde_desktop.h  lxqt_desktop.cpp  lxqt_desktop.h  mate_desktop.cpp  mate_desktop.h  ukui_desktop.cpp  ukui_desktop.h  window_manager_desktop.cpp  window_manager_desktop.h  xfce_desktop.cpp  xfce_desktop.h  xfce_lite_desktop.cpp  xfce_lite_desktop.h
src/domain/features/: beta_features.cpp  beta_features.h  education.cpp  education.h
src/domain/gui/: beautification_manager.cpp  beautification_manager.h  desktop_manager.cpp  desktop_manager.h  gui.cpp  gui.hpp  remote_desktop_manager.cpp  remote_desktop_manager.h  vnc_manager.cpp  vnc_manager.h
src/domain/gui_config/: registries.h  templates.h
src/domain/runtime/: chroot_runtime.cpp  container.cpp  container.h  container_manager.cpp  container_manager.h  installer.cpp  installer.hpp  nspawn_runtime.cpp  proot_runtime.cpp  rootfs_registry.cpp  rootfs_registry.h  runtime.h
src/domain/system/: backup.cpp  backup.h  config_manager.cpp  config_manager.h  environment.cpp  environment.h  mirror_registry.cpp  mirror_registry.h  mirrors.cpp  mirrors.h  package_manager.cpp  package_manager.h  termux.cpp  termux.h
src/domain/virtualization/: docker.cpp  docker.h  virtualization.cpp  virtualization.h
src/ui/: CMakeLists.txt  action.h  builtin_actions.h  choice_action.h  delegate_actions.h  dialog_helpers.h  menu.cpp  menu.h  menu_engine.cpp  menu_engine.h  menu_item.h  plugin.h  plugin_helpers.h  registry.cpp  registry.h
src/ui/menus/: backup_plugin.cpp  backup_plugin.h  beta_features_plugin.cpp  beta_features_plugin.h  browser_plugin.cpp  browser_plugin.h  config_plugin.cpp  config_plugin.h  dev_tools_plugin.cpp  dev_tools_plugin.h  docker_plugin.cpp  docker_plugin.h  download_tools_plugin.cpp  download_tools_plugin.h  education_plugin.cpp  education_plugin.h  gui_beautify_plugin.cpp  gui_beautify_plugin.h  gui_desktop_plugin.cpp  gui_desktop_plugin.h  gui_remote_plugin.cpp  gui_remote_plugin.h  input_method_plugin.cpp  input_method_plugin.h  main_menu.cpp  main_menu.h  office_plugin.cpp  office_plugin.h  plugin_factories.h  software_center_plugin.cpp  software_center_plugin.h  terminal_app_plugin.cpp  terminal_app_plugin.h  termux_plugin.cpp  termux_plugin.h  virtualization_plugin.cpp  virtualization_plugin.h
tests/: test_core.cpp
tests/core/: test_command_builder.cpp  test_distro_family.cpp  test_plugin_helpers.cpp  test_shell_escape.cpp  test_ui_framework.cpp
tools/: add_missing_i18n.py  add_sudo.py  audit_final.py  check_i18n.py  embed_i18n.cmake  embed_i18n.py  embed_json.cmake  embed_json.py
